--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
         <div class="main">
             <h1 id="Home">Halcon King Lance</h1>
+            <p>WAAAAAAAAAAAAAHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH</p>
             <h1 id="About">ABOUT ME</h1>
             <h1 id="Contact">CONTACT</h1>
         </div>
